2023-12-31 [1.42 Bld 260]

- Bugfix      : On Z80-like targets, do not parse single -/+ as
                indirect expression
- Bugfix      : If address overflow occured, the code that triggered
                it was displayed anyway in the listing, and with
                a wrong start address.

2023-12-27 [1.42 Bld 259]

- Bugfix      : On 68K, correctly skip spaces in indirect
                addressing argument lists

2023-12-23 [1.42 Bld 258]

- Bugfix      : disallow a few addressing modes for TST on 68K
- Bugfix      : reduce size of icon resource for Windows binaries

2023-12-17 [1.42 Bld 257]

- Change      : On F8, I/O accesses to addresses 0 to 3 via IN or
                OUT now result in a warning, since they are
                only accessible via INS and OUTS.
- Bugfix      : correct several 8087 instructions

2023-12-02 [1.42 Bld 256]

- Bugfix      : TLCS-90(0): Allow arguments of LDA, JP amd CALL to be
                written without enclosing parentheses.
- Addition    : Support register symbols for SC/MP
- Change      : On SC/MP, Usage of -128 as displacement with P1...P3
                emits a warning instead of an error 

2023-11-17 [1.42 Bld 255]

- Bugfix      : SC/MP: Allow PC-relative addressing with displacement
                of -128, but disallow using E.  Likewise, allow E and
                forbid -128 if pointer register is P1...P3.
- Change      : Message source files now have the extension '.mes'
                instead of '.res' to avoid extension conflicts with
                resource files on some systems
- Bugfix      : (Default) endianess for DW, DD,... on NS32K is little endian
- Addition    : Add BIGENDIAN for NS32K

2023-11-04 [1.42 Bld 254]

- Bugfix      : TLCS-9000: correct condition parsing

2023-11-04 [1.42 Bld 253]

- Bugfix      : SC/MP: Allow PC with displacement as address argument,
                as long as no auto-increment is used
- Bugfix      : SC/MP: Check whether PC-relative addressing would result